[project]
name = "ex1"
version = "0.1.0"
description = "install poetry"
authors = [
    {name = "marasolo",email = "marasolo@student.42antananarivo.mg"}
]
requires-python = ">=3.10,<3.14"
dependencies = [
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
